# Two-Waves-Interpolation

./: CMakeLists.txt  README.md  wave.frag
source/: main.cpp  noOpenGL.cpp
